--- a/movie-app/Modules/Movies/MoviesStoryboard.storyboard
+++ b/movie-app/Modules/Movies/MoviesStoryboard.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="16097.2" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="bUw-q5-8gl">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="16097.3" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="a6i-8R-vl5">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16087"/>
@@ -10,19 +10,53 @@
         <!--Movies-->
         <scene sceneID="jBL-KG-BS5">
             <objects>
-                <viewController id="bUw-q5-8gl" sceneMemberID="viewController">
+                <viewController title="Movies" id="bUw-q5-8gl" customClass="MoviesViewController" customModule="Movies" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="kKA-ub-pZU">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="bFr-aZ-Pw2">
+                                <rect key="frame" x="0.0" y="140" width="414" height="673"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                            </tableView>
+                        </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <constraints>
+                            <constraint firstItem="bFr-aZ-Pw2" firstAttribute="leading" secondItem="d2W-Ob-YoV" secondAttribute="leading" id="Ztt-Kz-Njh"/>
+                            <constraint firstItem="bFr-aZ-Pw2" firstAttribute="top" secondItem="d2W-Ob-YoV" secondAttribute="top" id="bfu-oW-Q1d"/>
+                            <constraint firstItem="d2W-Ob-YoV" firstAttribute="trailing" secondItem="bFr-aZ-Pw2" secondAttribute="trailing" id="elV-HQ-UXh"/>
+                            <constraint firstItem="d2W-Ob-YoV" firstAttribute="bottom" secondItem="bFr-aZ-Pw2" secondAttribute="bottom" id="wHD-RD-ykR"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="d2W-Ob-YoV"/>
                     </view>
-                    <tabBarItem key="tabBarItem" title="Movies" image="video" catalog="system" id="yzu-JT-iHp"/>
+                    <navigationItem key="navigationItem" title="Movies" id="3l1-hj-C5G"/>
                     <simulatedTabBarMetrics key="simulatedBottomBarMetrics"/>
+                    <connections>
+                        <outlet property="tableview" destination="bFr-aZ-Pw2" id="aDN-hR-BXr"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="BxD-Ce-vSL" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="122" y="-250"/>
+            <point key="canvasLocation" x="1031.8840579710145" y="-250.44642857142856"/>
+        </scene>
+        <!--Movies-->
+        <scene sceneID="I90-ZM-EFS">
+            <objects>
+                <navigationController title="Movies" automaticallyAdjustsScrollViewInsets="NO" id="a6i-8R-vl5" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Movies" image="video" catalog="system" id="yzu-JT-iHp"/>
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" largeTitles="YES" id="TtO-zK-owe">
+                        <rect key="frame" x="0.0" y="44" width="414" height="96"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="bUw-q5-8gl" kind="relationship" relationship="rootViewController" id="LNm-sw-LZN"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="HNa-Eq-Gvs" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="121.73913043478262" y="-250.44642857142856"/>
         </scene>
     </scenes>
     <resources>
