--- a/movie-app/Modules/Search/SearchStoryboard.storyboard
+++ b/movie-app/Modules/Search/SearchStoryboard.storyboard
@@ -7,10 +7,10 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--Search View Controller-->
         <scene sceneID="hG1-HW-GGj">
             <objects>
-                <viewController id="tne-Bh-8nc" sceneMemberID="viewController">
+                <viewController id="tne-Bh-8nc" customClass="SearchViewController" customModule="Movies" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="dp5-4j-qep">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
