--- a/movie-app/Modules/Movies/cells/MovieSectionTableViewCell.xib
+++ b/movie-app/Modules/Movies/cells/MovieSectionTableViewCell.xib
@@ -9,47 +9,55 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="MovieSectionTableViewCell" rowHeight="329" id="KGk-i7-Jjw" customClass="MovieSectionTableViewCell" customModule="Movies" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="511" height="329"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="MovieSectionTableViewCell" rowHeight="492" id="KGk-i7-Jjw" customClass="MovieSectionTableViewCell" customModule="Movies" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="673" height="492"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="511" height="329"/>
+                <rect key="frame" x="0.0" y="0.0" width="673" height="492"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="JR2-AT-qxj">
-                        <rect key="frame" x="20" y="20" width="41.5" height="26.5"/>
-                        <fontDescription key="fontDescription" type="system" pointSize="22"/>
+                        <rect key="frame" x="20" y="20" width="58" height="33.5"/>
+                        <fontDescription key="fontDescription" type="boldSystem" pointSize="28"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="wCU-D7-1Em">
-                        <rect key="frame" x="20" y="66.5" width="471" height="251.5"/>
-                    </tableView>
                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="v3c-5U-gnE">
-                        <rect key="frame" x="445" y="20" width="46" height="30"/>
+                        <rect key="frame" x="607" y="20" width="46" height="30"/>
                         <state key="normal" title="See all"/>
                         <connections>
                             <action selector="seeAllButtonAction:" destination="KGk-i7-Jjw" eventType="touchUpInside" id="VBQ-6O-TYe"/>
                         </connections>
                     </button>
+                    <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="0pP-Yy-5ba">
+                        <rect key="frame" x="20" y="58.5" width="633" height="417.5"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" minimumLineSpacing="10" minimumInteritemSpacing="10" id="u2Q-yK-zZ1">
+                            <size key="itemSize" width="250" height="420"/>
+                            <size key="estimatedItemSize" width="128" height="128"/>
+                            <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                            <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                            <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                        </collectionViewFlowLayout>
+                    </collectionView>
                 </subviews>
                 <constraints>
-                    <constraint firstItem="wCU-D7-1Em" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" id="4Ms-96-Bxe"/>
                     <constraint firstItem="v3c-5U-gnE" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="20" id="4uH-Lf-qPh"/>
-                    <constraint firstItem="wCU-D7-1Em" firstAttribute="top" secondItem="JR2-AT-qxj" secondAttribute="bottom" constant="20" id="9C1-4g-lv0"/>
-                    <constraint firstItem="wCU-D7-1Em" firstAttribute="bottom" secondItem="H2p-sc-9uM" secondAttribute="bottomMargin" id="Aqo-Ty-zCS"/>
-                    <constraint firstAttribute="trailingMargin" secondItem="wCU-D7-1Em" secondAttribute="trailing" id="QrC-1R-SKf"/>
+                    <constraint firstItem="0pP-Yy-5ba" firstAttribute="top" secondItem="JR2-AT-qxj" secondAttribute="bottom" constant="5" id="D7O-G2-Cjo"/>
+                    <constraint firstAttribute="bottomMargin" secondItem="0pP-Yy-5ba" secondAttribute="bottom" constant="5" id="Hht-c5-Zul"/>
+                    <constraint firstAttribute="trailingMargin" secondItem="0pP-Yy-5ba" secondAttribute="trailing" id="MSL-SI-f96"/>
                     <constraint firstItem="JR2-AT-qxj" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="20" id="Tiy-zI-swD"/>
+                    <constraint firstItem="0pP-Yy-5ba" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" id="Tl1-gw-NgS"/>
                     <constraint firstAttribute="trailing" secondItem="v3c-5U-gnE" secondAttribute="trailing" constant="20" id="akS-HG-HxV"/>
                     <constraint firstItem="JR2-AT-qxj" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="20" id="xao-JB-tTo"/>
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
             <connections>
-                <outlet property="moviesTableView" destination="wCU-D7-1Em" id="Nnq-E8-nGL"/>
+                <outlet property="collectionView" destination="0pP-Yy-5ba" id="KV4-Bb-B7r"/>
                 <outlet property="titleLabel" destination="JR2-AT-qxj" id="FfO-Si-Qpt"/>
             </connections>
-            <point key="canvasLocation" x="252.89855072463769" y="98.102678571428569"/>
+            <point key="canvasLocation" x="370.28985507246381" y="152.67857142857142"/>
         </tableViewCell>
     </objects>
 </document>
