--- a/movie-app/Modules/Movies/cells/ItemMovieCollectionViewCell.xib
+++ b/movie-app/Modules/Movies/cells/ItemMovieCollectionViewCell.xib
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="16097.3" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="17156" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16087"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17125"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -10,42 +11,49 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="ItemMovieCollectionViewCell" id="gTV-IL-0wX" customClass="ItemMovieCollectionViewCell" customModule="Movies" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="220" height="320"/>
+            <rect key="frame" x="0.0" y="0.0" width="250" height="350"/>
             <autoresizingMask key="autoresizingMask"/>
             <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                <rect key="frame" x="0.0" y="0.0" width="220" height="320"/>
+                <rect key="frame" x="0.0" y="0.0" width="250" height="350"/>
                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                 <subviews>
-                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="vmQ-m3-rfr">
-                        <rect key="frame" x="0.0" y="0.0" width="220" height="261"/>
+                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="square.and.arrow.down.on.square.fill" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="vmQ-m3-rfr">
+                        <rect key="frame" x="0.0" y="-1.5" width="250" height="295"/>
                     </imageView>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="aWo-2Z-47O">
-                        <rect key="frame" x="5" y="297" width="215" height="18"/>
-                        <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                        <rect key="frame" x="0.0" y="327" width="250" height="18"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="18" id="EED-n6-4or"/>
+                        </constraints>
+                        <fontDescription key="fontDescription" type="system" pointSize="16"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="VdQ-AS-chb">
-                        <rect key="frame" x="5" y="266" width="215" height="21"/>
-                        <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="17"/>
+                        <rect key="frame" x="0.0" y="296" width="250" height="21"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="21" id="ePZ-O1-YF0"/>
+                        </constraints>
+                        <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="18"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
                 </subviews>
             </view>
+            <viewLayoutGuide key="safeArea" id="ZTg-uK-7eu"/>
             <constraints>
                 <constraint firstAttribute="bottom" secondItem="aWo-2Z-47O" secondAttribute="bottom" constant="5" id="43C-W4-XQe"/>
                 <constraint firstItem="vmQ-m3-rfr" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" id="F22-fL-O7c"/>
-                <constraint firstItem="VdQ-AS-chb" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" constant="5" id="Gj0-4f-yYl"/>
+                <constraint firstItem="VdQ-AS-chb" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="Gj0-4f-yYl"/>
                 <constraint firstAttribute="trailing" secondItem="VdQ-AS-chb" secondAttribute="trailing" id="Ivt-JX-ZNG"/>
                 <constraint firstItem="VdQ-AS-chb" firstAttribute="top" secondItem="vmQ-m3-rfr" secondAttribute="bottom" constant="5" id="Mlx-gk-2Hw"/>
-                <constraint firstItem="aWo-2Z-47O" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" constant="5" id="XTB-US-kBA"/>
+                <constraint firstItem="aWo-2Z-47O" firstAttribute="top" secondItem="VdQ-AS-chb" secondAttribute="bottom" constant="10" id="Un8-8m-LmI"/>
+                <constraint firstItem="aWo-2Z-47O" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="XTB-US-kBA"/>
                 <constraint firstItem="aWo-2Z-47O" firstAttribute="top" secondItem="VdQ-AS-chb" secondAttribute="bottom" constant="10" id="aSt-7Z-f69"/>
                 <constraint firstAttribute="trailing" secondItem="aWo-2Z-47O" secondAttribute="trailing" id="bAL-s4-Pw8"/>
                 <constraint firstItem="vmQ-m3-rfr" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="po9-UY-Kpq"/>
                 <constraint firstAttribute="trailing" secondItem="vmQ-m3-rfr" secondAttribute="trailing" id="xn9-Rd-81q"/>
             </constraints>
-            <viewLayoutGuide key="safeArea" id="ZTg-uK-7eu"/>
             <size key="customSize" width="219" height="316"/>
             <connections>
                 <outlet property="posterImageView" destination="vmQ-m3-rfr" id="8Vv-r0-WyI"/>
@@ -55,4 +63,7 @@
             <point key="canvasLocation" x="216.66666666666669" y="142.96875"/>
         </collectionViewCell>
     </objects>
+    <resources>
+        <image name="square.and.arrow.down.on.square.fill" catalog="system" width="122" height="128"/>
+    </resources>
 </document>
